--- a/templates/account/password.html
+++ b/templates/account/password.html
@@ -7,11 +7,9 @@
         <div class="container container-main">
 
 {% from "_formhelpers.html" import render_field %}
+{{ helper.render_account_local_nav(current_user, active_link) }}
 <div class="row">
-    <div class="col-md-3">
-        {{ helper.render_account_local_nav(current_user, active_link) }}
-    </div>
-    <div class="col-md-9">
+    <div class="col-md-9 col-sm-offset-3">
         <h1><strong>{{current_user.fullname}}</strong>: {{ _('Change your Password') }}</h1>
         <form method="post" role="form" action="{{ url_for('account.change_password', name=current_user.name) }}">
             <fieldset>
