--- a/templates/account/reset-api-key.html
+++ b/templates/account/reset-api-key.html
@@ -4,11 +4,9 @@
 {% import "account/_helpers.html" as helper %}
 
 {% block content %}
+    {{ helper.render_account_local_nav(current_user, active_link) }}
 <div class="row">
-    <div class="col-md-3">
-        {{ helper.render_account_local_nav(current_user, active_link) }}
-    </div>
-    <div class="col-md-9">
+    <div class="col-md-9 col-sm-offset-3">
         <h1><strong>{{current_user.fullname}}</strong>: {{ _(' Reset API Key') }}</h1>
         <div class="alert alert-warning">
             <strong>{{ _('Note') }}</strong>{{ _(' If you reset the API key, you will need to use the new generated key for any API call.') }}
