--- a/templates/account/settings.html
+++ b/templates/account/settings.html
@@ -4,12 +4,10 @@
 {% import "account/_helpers.html" as helper %}
 
 {% block content %}
+    {{ helper.render_account_local_nav(current_user, active_link) }} 
     <div class="container-main">
 <div class="row">
-    <div class="col-md-3">
-        {{ helper.render_account_local_nav(current_user, active_link) }} 
-    </div>
-    <div class="col-md-9">
+    <div class="col-md-9 col-sm-offset-3">
         <h1><strong>{{_('User')}}</strong>: {{ user.fullname }}</h1>
         {{ helper.render_user_profile(user, upload_method, "settings") }}
         <a href="{{ url_for('account.update_profile', name=current_user.name) }}" class="btn btn-lg"><i class="icon glyphicon glyphicon-user"></i> {{ _('Update your profile') }}</a>
