--- a/templates/admin/bl_search.html
+++ b/templates/admin/bl_search.html
@@ -17,8 +17,8 @@
                     {{form.hidden_tag()}}
                     <fieldset>
                         {{ render_field(form.query, placeholder= _('Query'), class="form-control", required="true") }}
-                        {{ render_field(form.startPos, placeholder= _('Starting position'), class="form-control", type="number") }}
-                        {{ render_field(form.maxRecords, placeholder= _('Maximum records'), class="form-control", type="number") }}
+                        {{ render_field(form.startPos, placeholder= _('Starting position'), class="form-control", type="number", min="0") }}
+                        {{ render_field(form.maxRecords, placeholder= _('Maximum records'), class="form-control", type="number", min="0") }}
                         {{ render_field(form.format, class="form-control inline-radio") }}
                         <div class="pull-right" role="group">
                             <button type="submit" class="btn btn-danger">{{_('Search')}}</button>
@@ -40,5 +40,4 @@
 </div>
 <script type="text/xml" id="xml2">{{record}}</script>
 <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
-<script src="{{url_for('static', filename='js/vkbeautify.js')}}" type="text/javascript"></script>
 {% endblock %}
