--- a/templates/admin/categories.html
+++ b/templates/admin/categories.html
@@ -4,13 +4,11 @@
 {% from "admin/_helpers.html" import render_admin_local_nav %}
 
 {% block content %}
+    {{ render_admin_local_nav(current_user, active_link) }}
 <div class="container-padded">
     <div class="container container-padded">
         <div class="row">
-            <div class="col-sm-3">
-                {{ render_admin_local_nav(current_user, active_link) }}
-            </div>
-            <div id="categories" class="col-sm-9">
+            <div id="categories" class="col-sm-9 col-sm-offset-3">
                 <h1><strong>{{ _('Admin') }}:</strong> {{ _('Manage Categories') }}</h1>
                 <hr>
                 <div class="row">
