--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -4,15 +4,11 @@
 {% from "admin/_helpers.html" import render_admin_local_nav %}
 
 {% block content %}
+    {{ render_admin_local_nav(current_user, active_link) }}
     <div class="container-padded">
         <div class="container container-padded">
             <div class="row">
-                
-                <div class="col-sm-3">
-                    {{ render_admin_local_nav(current_user, active_link) }}
-                </div>
-                
-                <div class="col-sm-9">
+                <div class="col-sm-9 col-sm-offset-3">
                     <h1><strong>Admin Options</strong></h1>
                     
                     <div class="row">
