--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -5,13 +5,11 @@
 {% from "admin/_helpers.html" import render_admin_local_nav %}
 
 {% block content %}
+    {{ render_admin_local_nav(current_user, active_link) }}
 <div class="container-padded">
     <div class="container container-padded">
         <div class="row">
-            <div class="col-sm-3">
-                {{ render_admin_local_nav(current_user, active_link) }}
-            </div>
-            <div class="col-sm-9">
+            <div class="col-sm-9 col-sm-offset-3">
                 <h1><strong>{{ _('Admin') }}:</strong> {{ _('Manage Administrators') }}</h1>
                 {% from "_formhelpers.html" import render_field %}
                 <form class="form-search" method="POST">
