--- a/templates/applications/non_stats.html
+++ b/templates/applications/non_stats.html
@@ -4,11 +4,9 @@
 {% import "applications/_helpers.html" as helper %}
 
 {% block content %}
-<div class="row" style="min-height:400px;">
-    <div class="col-sm-3">
-        {{helper.render_app_local_nav(app, 'stats', current_user)}}
-    </div>
-    <div class="col-sm-9">
+    {{helper.render_app_local_nav(app, 'stats', current_user)}}
+<div class="row">
+    <div class="col-sm-9 col-sm-offset-3">
         {{helper.render_app_title(app, upload_method, subtitle='Statistics') }}
         <span class="alert alert-warning"><strong>Ooops</strong> Sorry, the project does not have tasks to process and show some statistics</span>
     </div>
