--- a/templates/applications/password.html
+++ b/templates/applications/password.html
@@ -5,13 +5,11 @@
 
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
+{{ helper.render_app_local_nav(app, 'contribute', current_user) }}
     <div class="container-padded">
         <div class="container container-padded">
 <div id="app-form" class="row"> 
-    <div class="col-sm-3">
-        {{ helper.render_app_local_nav(app, 'contribute', current_user) }}
-    </div>
-    <div class="col-sm-6">
+    <div class="col-sm-6 col-sm-offset-3">
         {{ helper.render_app_title(app) }}
         <h2>{{ _('Enter the password to contribute to this project:') }}</h2>
     <form class="form-horizontal" method="post" action="{{ url_for('app.password_required', short_name=short_name, next=next) }}">
