--- a/templates/applications/settings.html
+++ b/templates/applications/settings.html
@@ -4,15 +4,13 @@
 {% import "applications/_helpers.html" as helper %}
 
 {% block content %}
+    {{ render_app_local_nav(current_user, active_link) }}
 <div class="container-padded">
     <div class="container container-padded">
         <div class="row">
             {% if app %}
-            <div class="col-sm-3">
-                {{ helper.render_app_local_nav(app, 'settings', current_user) }}
-            </div>
             <!-- Project -->
-            <div class="col-sm-9 xs-center">
+            <div class="col-sm-9 col-sm-offset-3 xs-center">
                 <h1><strong>{{ app.name }}</strong>: {{ _('Settings') }}</h1>
                 {{ helper.render_app_summary(app, n_tasks, overall_progress, last_activity, current_user, upload_method) }}
                 <h2 class="padding-top-sm">{{ _('Project Settings') }}</h2>
