--- a/templates/applications/stats.html
+++ b/templates/applications/stats.html
@@ -20,14 +20,13 @@
 <script>
     var appStats = {{appStats|safe}};
 </script>
+
+{{ render_app_local_nav(current_user, active_link) }}
      <div class="container-padded  remove-padding-bottom">
         <section class="white">
             <div class="container container-padded">
 <div class="row">
-    <div class="col-sm-3">
-        {{helper.render_app_local_nav(app, 'stats', current_user)}}
-    </div>
-    <div class="col-sm-9">
+    <div class="col-sm-9 col-sm-offset-3">
         {% if enforce_privacy and (current_user.is_anonymous() or (current_user.is_authenticated and not current_user.admin)) %}
         {{ privacy.render_lock_page() }}
         {% else %}
