--- a/templates/applications/task_autoimport_options.html
+++ b/templates/applications/task_autoimport_options.html
@@ -5,13 +5,11 @@
 
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
-    <div class="container-padded">
-        <div class="container container-padded">
+{{ render_app_local_nav(current_user, active_link) }}
+<div class="container-padded">
+    <div class="container container-padded">
         <div class="row">
-            <div class="col-sm-3">
-                {{ helper.render_app_local_nav(app, 'tasks', current_user)}}
-            </div>
-            <div class="col-sm-9">
+            <div class="col-sm-9 col-sm-offset-3">
                 {{ helper.render_app_title(app, subtitle=_('Setup task autoimporter'))}}
                 <div class="row">
                     <div class="col-sm-12">
