--- a/templates/applications/task_autoimporter.html
+++ b/templates/applications/task_autoimporter.html
@@ -6,13 +6,11 @@
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
 {{ helper.render_loading(loading_text) }}
-    <div class="container-padded">
-        <div class="container container-padded">
+{{ render_admin_local_nav(current_user, active_link) }}
+<div class="container-padded">
+    <div class="container container-padded">
         <div class="row">
-            <div class="col-sm-3">
-                {{ helper.render_app_local_nav(app, 'tasks', current_user)}}
-            </div>
-            <div class="col-sm-9">
+            <div class="col-sm-9 col-sm-offset-3">
                 <h1><strong>{{app.name}}</strong>: {{_('Currently configured autoimport')}}</h1>
                 <h2>{{_('You currently have the following autoimporter configured')}}</h2>
                 {% if importer['type']=='epicollect' %}
