--- a/templates/applications/task_n_answers.html
+++ b/templates/applications/task_n_answers.html
@@ -6,13 +6,11 @@
 
 {% block content %}
 {% if app %}
+{{ render_admin_local_nav(current_user, active_link) }}
 <div class="container-padded">
-        <div class="container container-padded">
-                        <div class="row">
-                            <div class="col-sm-3">
-                                {{ helper.render_app_local_nav(app, 'tasks', current_user) }}
-                            </div>
-                            <div class="col-sm-9">
+    <div class="container container-padded">
+        <div class="row">
+            <div class="col-sm-9 col-sm-offset-3">
                                 {{ helper.render_app_title(app, subtitle=_('Task Redundancy')) }}
                                 <form id="task_redundancy" class="form-horizontal" method="post" action="{{ url_for('app.task_n_answers', short_name=app.short_name) }}">
                                     {{ form.hidden_tag() }}
