--- a/templates/applications/task_presenter_options.html
+++ b/templates/applications/task_presenter_options.html
@@ -4,13 +4,11 @@
 {% import "applications/_helpers.html" as helper %}
 
 {% block content %}
-    <div class="container-padded">
-        <div class="container container-padded">
-            <div class="row">
-                <div class="col-sm-3">
-                    {{ helper.render_app_local_nav(app, active_link, current_user) }}
-                </div>
-                <div class="col-sm-9">
+{{ render_admin_local_nav(current_user, active_link) }}
+<div class="container-padded">
+    <div class="container container-padded">
+        <div class="row">
+            <div class="col-sm-9 col-sm-offset-3">
                     {% include "applications/snippets/options.html" %}
                 </div>
             </div>
