--- a/templates/applications/tasks.html
+++ b/templates/applications/tasks.html
@@ -5,13 +5,11 @@
 
 {% block content %}
 {% if app %}
-<div class="container-padded  remove-padding-bottom">
-        <div class="container container-padded">
-                <div class="row">
-                    <div class="col-sm-3">
-                        {{ helper.render_app_local_nav(app, 'tasks', current_user) }}
-                    </div>
-                    <div class="col-sm-9">
+{{ render_admin_local_nav(current_user, active_link) }}
+<div class="container-padded">
+    <div class="container container-padded">
+        <div class="row">
+            <div class="col-sm-9 col-sm-offset-3">
                         {{ helper.render_app_title(app, upload_method, subtitle=_('Tasks'))}}
                         {{ helper.render_overall_progress(app, n_tasks, overall_progress, show_contribute_btn=False, show_n_tasks=True) }}
                         {% if app.owner_id == current_user.id or (current_user.is_authenticated() and current_user.admin)%}
