--- a/templates/applications/tasks_browse.html
+++ b/templates/applications/tasks_browse.html
@@ -5,13 +5,11 @@
 
 {% block content %}
 {% if app %}
-    <div class="container-padded">
-        <div class="container container-padded">
+{{ render_admin_local_nav(current_user, active_link) }}
+<div class="container-padded">
+    <div class="container container-padded">
         <div class="row">
-            <div class="col-sm-3">
-                {{ helper.render_app_local_nav(app, 'tasks', current_user) }}
-            </div>
-            <div class="col-sm-9">
+            <div class="col-sm-9 col-sm-offset-3">
                 {{ helper.render_app_title(app, upload_method, subtitle=_('Browse tasks')) }}
                 <hr>
                 <p>{{_('This page shows all the available tasks for this project')}}.</p> 
