--- a/templates/applications/update.html
+++ b/templates/applications/update.html
@@ -6,13 +6,11 @@
 {% from "_formhelpers.html" import render_field %}
 <script src="{{url_for('static', filename='js/vendor/jquery.Jcrop.min.js')}}"></script>
 <link rel="stylesheet" href="{{url_for('static', filename='css/jquery.Jcrop.min.css')}}" type="text/css" />
-    <div class="container-padded">
-        <div class="container container-padded">
+{{ render_admin_local_nav(current_user, active_link) }}
+<div class="container-padded">
+    <div class="container container-padded">
         <div class="row">
-            <div class="col-sm-3">
-                {{ helper.render_app_local_nav(app, 'settings', current_user) }}
-            </div>
-          <div class="col-sm-9">
+            <div class="col-sm-9 col-sm-offset-3">
               <legend><strong>{{app.name}}</strong>: {{_('Update the project')}}</legend>
               <!-- Update form for project thumbnail -->
               <form method="post" class="form-horizontal" action="{{ url_for('app.update', short_name=app.short_name) }}" enctype="multipart/form-data">
