--- a/templates/applications/update_blogpost.html
+++ b/templates/applications/update_blogpost.html
@@ -5,13 +5,11 @@
 
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
-    <div class="container-padded">
-        <div class="container container-padded">
-            <div id="app-form" class="row"> 
-                <div class="col-sm-3">
-                    {{ helper.render_app_local_nav(app, 'blog', current_user) }}
-                </div>
-                <div class="col-sm-9">
+{{ render_admin_local_nav(current_user, active_link) }}
+<div class="container-padded">
+    <div class="container container-padded">
+        <div class="row">
+            <div class="col-sm-9 col-sm-offset-3">
                     {{ helper.render_app_title(app) }}
                     <h2>{{ _('Edit the blog post') }}</h2>
                     <form class="form-horizontal" method="post" action="{{ url_for('app.update_blogpost',
