--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1112,6 +1112,7 @@ ul.users li a {
 
 #main-body-content {
     padding-bottom: 120px;
+    min-height: 800px;
 }
 
 #sticky-footer li {
@@ -1573,11 +1574,14 @@ margin-bottom: 10px;
     display: none;
   }
   
-  text-center-xs {
+  .text-center-xs {
     text-align: center;
   }
 }
 
+pre.prettyprint {
+  text-align: left;
+}
 
 
 .vcenter {
