--- a/templates/account/projects.html
+++ b/templates/account/projects.html
@@ -5,19 +5,13 @@
 {% import "applications/_helpers.html" as app_helper %}
 
 {% block content %}
+    {{ render_admin_local_nav(current_user, active_link) }}
     <div class="container-padded">
         <div class="container container-padded">
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-sm-9 col-sm-offset-3">
                     {% if current_user.admin == 1 %}
-                        <div class="col-md-8 col-xs-12 vcenter">
-                            <h1><strong>{{ current_user.fullname }}'s</strong>: {{ _('Projects') }}</h1><a href"#" class="btn btn-danger pull-right">Create Project</a>
-                        </div>
-
-                        <div class="col-md-4 col-xs-12 text-center">            
-                            <a href="{{url_for('app.new')}}" class="btn btn-danger pull-right">Create a Project</a>
-                        </div>
-                        
+                        <h1><strong>{{ current_user.fullname }}'s</strong>: {{ _('Projects') }}</h1><a href"#" class="btn btn-danger pull-right">Create Project</a>
                         {% if apps_published or apps_draft %}
                             {% if apps_published %}
                             <h2>{{ _('Published') }}</h2>
