--- a/templates/account/signin.html
+++ b/templates/account/signin.html
@@ -1,27 +1,27 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="container container-main">
+    <div class="container container-main text-center">
       
       {% if next is not none%}
           {% if auth.twitter %}
-          <a href="{{ url_for('twitter.login', next=next) }}" class="btn btn-info"><i class="glyphicon glyphicon-twitter"></i> {{ _('Sign in with Twitter') }}</a>
+          <a href="{{ url_for('twitter.login', next=next) }}" class="btn btn-info"><i class="fa fa-twitter"></i> {{ _('Sign in with Twitter') }}</a>
           {% endif %}
           {% if auth.facebook %}
-          <a href="{{ url_for('facebook.login', next=next) }}" class="btn btn-primary"><i class="glyphicon glyphicon-facebook"></i> {{ _('Sign in with Facebook') }}</a>
+          <a href="{{ url_for('facebook.login', next=next) }}" class="btn btn-primary"><i class="fa fa-facebook"></i> {{ _('Sign in with Facebook') }}</a>
           {% endif %}
           {% if auth.google %}
-          <a href="{{ url_for('google.login') }}" class="btn btn-danger"><i class="glyphicon glyphicon-google-plus"></i> {{ _('Sign in with Google') }}</a>
+          <a href="{{ url_for('google.login') }}" class="btn btn-danger"><i class="fa fa-google-plus"></i> {{ _('Sign in with Google') }}</a>
           {% endif %}
         {% else %}
           {% if auth.twitter %}
-          <a href="{{ url_for('twitter.login') }}" class="btn btn-info"><i class="glyphicon glyphicon-twitter"></i> {{ _('Sign in with Twitter') }}</a>
+          <a href="{{ url_for('twitter.login') }}" class="btn btn-info"><i class="fa fa-twitter"></i> {{ _('Sign in with Twitter') }}</a>
           {% endif %}
           {% if auth.facebook %}
-          <a href="{{ url_for('facebook.login') }}" class="btn btn-primary"><i class="glyphicon glyphicon-facebook"></i> {{ _('Sign in with Facebook') }}</a>
+          <a href="{{ url_for('facebook.login') }}" class="btn btn-primary"><i class="fa fa-facebook"></i> {{ _('Sign in with Facebook') }}</a>
           {% endif %}
           {% if auth.google %}
-          <a href="{{ url_for('google.login') }}" class="btn btn-danger"><i class="glyphicon glyphicon-google-plus"></i> {{ _('Sign in with Google') }}</a>
+          <a href="{{ url_for('google.login') }}" class="btn btn-danger"><i class="fa fa-google-plus"></i> {{ _('Sign in with Google') }}</a>
         {% endif %}
       {% endif %}
       <hr>
