--- a/templates/applications/_helpers.html
+++ b/templates/applications/_helpers.html
@@ -40,8 +40,7 @@
     {% if ( current_user.is_authenticated() and current_user.id == app.owner_id ) or current_user.admin %}
     <li class="nav-link{% if active_link=="settings"%} active{% endif %}"><a href="{{url_for('app.settings', short_name=app.short_name)}}"><i class="glyphicon glyphicon-chevron-right"></i> {{_('Settings')}}</a></li>
     {% endif %}
-    {% if ( current_user.is_authenticated() and current_user.id == app.owner_id
-    and current_user.pro) or current_user.admin %}
+    {% if ( current_user.is_authenticated() and current_user.id == app.owner_id and current_user.pro) or current_user.admin %}
     <li class="nav-link{% if active_link=="auditlog"%} active{% endif %}"><a
         href="{{url_for('app.auditlog', short_name=app.short_name)}}"><i
     class="glyphicon glyphicon-chevron-right"></i> {{_('Audit Logs')}}</a></li>
