Duplicate buttons removed

--- a/templates/admin/bl_search.html
+++ b/templates/admin/bl_search.html
@@ -35,10 +35,9 @@
                 {% if apiString %}
                     <div class="row vcenter-sm">
                         <div class="col-sm-10 col-xs-12 vcenter-sm">
-                            <h4>{{count}}</h4>
+                            <h4>{{count}} results returned</h4>
                         </div>
                         <div class="col-sm-2 col-xs-12">
-                                <a href="#" id="search-catalogue-again" class="btn btn-danger pull-right-sm">Search Again</a>
                         </div>
                     </div>
                     <div id="catalogue-results">
