--- a/templates/account/signin.html
+++ b/templates/account/signin.html
@@ -1,27 +1,28 @@
 {% extends "base.html" %}
+{% set active_page = "signin" %}
 
 {% block content %}
     <div class="container container-main text-center">
       
       {% if next is not none%}
           {% if auth.twitter %}
-          <a href="{{ url_for('twitter.login', next=next) }}" class="btn btn-info"><i class="fa fa-twitter"></i> {{ _('Sign in with Twitter') }}</a>
+          <a href="{{ url_for('twitter.login', next=next) }}" class="btn btn-info"><i class="fa fa-twitter"></i><span class="hidden-xs"> {{ _('Sign in with Twitter') }}</span></a>
           {% endif %}
           {% if auth.facebook %}
-          <a href="{{ url_for('facebook.login', next=next) }}" class="btn btn-primary"><i class="fa fa-facebook"></i> {{ _('Sign in with Facebook') }}</a>
+          <a href="{{ url_for('facebook.login', next=next) }}" class="btn btn-primary"><i class="fa fa-facebook"></i><span class="hidden-xs"> {{ _('Sign in with Facebook') }}</span></a>
           {% endif %}
           {% if auth.google %}
-          <a href="{{ url_for('google.login') }}" class="btn btn-danger"><i class="fa fa-google-plus"></i> {{ _('Sign in with Google') }}</a>
+          <a href="{{ url_for('google.login') }}" class="btn btn-danger"><i class="fa fa-google-plus"></i><span class="hidden-xs"> {{ _('Sign in with Google') }}</span></a>
           {% endif %}
-        {% else %}
+      {% else %}
           {% if auth.twitter %}
-          <a href="{{ url_for('twitter.login') }}" class="btn btn-info"><i class="fa fa-twitter"></i> {{ _('Sign in with Twitter') }}</a>
+          <a href="{{ url_for('twitter.login') }}" class="btn btn-info"><i class="fa fa-twitter"></i><span class="hidden-xs"> {{ _('Sign in with Twitter') }}</span></a>
           {% endif %}
           {% if auth.facebook %}
-          <a href="{{ url_for('facebook.login') }}" class="btn btn-primary"><i class="fa fa-facebook"></i> {{ _('Sign in with Facebook') }}</a>
+          <a href="{{ url_for('facebook.login') }}" class="btn btn-primary"><i class="fa fa-facebook"></i><span class="hidden-xs"> {{ _('Sign in with Facebook') }}</span></a>
           {% endif %}
           {% if auth.google %}
-          <a href="{{ url_for('google.login') }}" class="btn btn-danger"><i class="fa fa-google-plus"></i> {{ _('Sign in with Google') }}</a>
+          <a href="{{ url_for('google.login') }}" class="btn btn-danger"><i class="fa fa-google-plus"></i><span class="hidden-xs"> {{ _('Sign in with Google') }}</span></a>
         {% endif %}
       {% endif %}
       <hr>
