--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -56,9 +56,25 @@ a:focus, a:hover {
   font-weight: 200;
 }
 
-.h1, .h2, .h3, .h4, h1, h2, h3, h4 {
+.h1, .h2, .h3, h1, h2, h3 {
   margin-bottom: 25px;
   color: #666;
+}
+
+.h1, h1 {
+  font-size: 2.2em;
+}
+
+.h2, h2 {
+  font-size: 1.8em;
+}
+
+.h3, h3 {
+  font-size: 1.5em;
+}
+
+.h4, h4 {
+  font-size: 1.2em;
 }
 
 p {
@@ -227,7 +243,6 @@ html {
 
 body {
   font-weight: lighter;
-  font-size: 16px;
   background-color: #ffffff;
   height:100%;
   width: 100%;
@@ -943,7 +958,7 @@ ul.users li a {
 }
 .bs-docs-sidenav .active .icon-chevron-right,
 .bs-docs-sidenav .active a:hover .icon-chevron-right {
-    font-size:18px;
+  font-size:18px;
   opacity: 1;
 }
 
@@ -1017,11 +1032,12 @@ ul.users li a {
   .bs-docs-sidenav {
     width: auto;
     margin-bottom: 20px;
+    
   }
   
-.bs-docs-sidenav.affix li:first-child {
-  padding-top: 20px;
-}
+  .bs-docs-sidenav.affix li:first-child {
+    padding-top: 20px;
+  }
   
   .affix {
     position: relative;
@@ -1033,10 +1049,10 @@ ul.users li a {
     margin-left: auto;
     text-align: center;  
   }
-    #cookies_warning {
-        padding: 2px 10px 2px;
-    }
     
+  #cookies_warning {
+    padding: 2px 10px 2px;
+  }
   
 }
 
@@ -1044,6 +1060,9 @@ ul.users li a {
 -------------------------*/
 @media (min-width: 768px) {
   
+  body {
+    font-size: 16px;
+  }
   
   .sticky-footer-col {
     height: 100px;
@@ -1155,7 +1174,7 @@ p.muted {
 
 p.score {
   margin-top: -20px;
-  font-size: 28px;
+  font-size: 1.8em;
 }
 
 .col-sm-3.control-label {
@@ -1535,7 +1554,7 @@ margin-bottom: 10px;
 }
 
 .splash h1{
-  font-size: 38px;
+  font-size: 2em;
   text-shadow: none;
   color: #fff;
   font-weight: 200;
@@ -1799,7 +1818,7 @@ img.grey-border{
 .loading-text {
   color: white;
   text-align: center;
-  font-size: 36px;
+  font-size: 2em;
   height: 100%;
 }
 
@@ -1985,7 +2004,6 @@ img.grey-border{
 
 .div .text-shadow {
   color: rgb(130, 130, 130);
-  font-size: 54px;
   background-color: rgb(186, 186, 186);
   text-shadow: rgb(224, 224, 224) 1px 1px 0px;
 }
