--- a/templates/account/signin.html
+++ b/templates/account/signin.html
@@ -32,7 +32,7 @@
             <div class="col-xs-12 col-sm-6 col-sm-offset-3">
               <form id="signin" method="post" role="form" action="">
                 {{ form.hidden_tag() }}
-                <h3 class="text-center">Or Sign in with your BL Crowds account</h3>
+                <h3 class="text-center">Or sign in with your {{brand}} account</h3>
                 
                 {{ render_field(form.email, placeholder="Email", class="form-control") }}
                 {{ render_field(form.password, placeholder="Password", class="form-control") }}
