--- a/templates/applications/task_autoimporter.html
+++ b/templates/applications/task_autoimporter.html
@@ -6,7 +6,7 @@
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
 {{ helper.render_loading(loading_text) }}
-{{ render_admin_local_nav(current_user, active_link) }}
+{{ render_app_local_nav(current_user, active_link) }}
 <div class="container-padded">
     <div class="container container-padded">
         <div class="row">
