--- a/templates/applications/task_import_options.html
+++ b/templates/applications/task_import_options.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
-{{ render_admin_local_nav(current_user, active_link) }}
+{{ render_app_local_nav(current_user, active_link) }}
 <div class="container-padded">
     <div class="container container-padded">
         <div class="row">
