--- a/templates/applications/task_presenter_options.html
+++ b/templates/applications/task_presenter_options.html
@@ -4,7 +4,7 @@
 {% import "applications/_helpers.html" as helper %}
 
 {% block content %}
-{{ render_admin_local_nav(current_user, active_link) }}
+{{ render_app_local_nav(current_user, active_link) }}
 <div class="container-padded">
     <div class="container container-padded">
         <div class="row">
