--- a/templates/applications/tasks_browse.html
+++ b/templates/applications/tasks_browse.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 {% if app %}
-{{ render_admin_local_nav(current_user, active_link) }}
+{{ render_app_local_nav(current_user, active_link) }}
 <div class="container-padded">
     <div class="container container-padded">
         <div class="row">
