--- a/templates/account/applications.html
+++ b/templates/account/applications.html
@@ -1,39 +1,66 @@
 {% extends "base.html" %}
 {% set active_page = "profile" %}
-{% set active_link = "applications" %}
 {% import "account/_helpers.html" as helper %}
 {% import "applications/_helpers.html" as app_helper %}
+{% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
-    <div class="container-padded">
-        <div class="container container-padded">
-            <div class="row">
-                <div class="col-sm-12">
+{{ render_local_nav(current_user, "openapp", "project") }}
+     <div class="container-padded  remove-padding-bottom">
+        <section class="white">
+            <div class="container container-padded">
+                <div class="row">
+                    <div class="col-sm-9 col-sm-offset-3">
                     {% if current_user.admin == 1 %}
-                        <div class="col-md-8 col-xs-12 vcenter">
-                            <h1><strong>{{ current_user.fullname }}'s</strong>: {{ _('Projects') }}</h1><a href"#" class="btn btn-danger pull-right">Create Project</a>
+                        <div class="row vcenter">
+                            <div class="col-md-8 col-xs-12 vcenter">
+                                <h1><strong>{{ current_user.fullname }}'s</strong>: {{ _('Projects') }}</h1>
+                            </div>
+    
+                            <div class="col-md-4 col-xs-12 text-center">            
+                                <a href="{{url_for('app.new')}}" class="btn btn-danger pull-right">Create a Project</a>
+                            </div>
                         </div>
-
-                        <div class="col-md-4 col-xs-12 text-center">            
-                            <a href="{{url_for('app.new')}}" class="btn btn-danger pull-right">Create a Project</a>
-                        </div>
-                        
+                        <hr>
                         {% if apps_published or apps_draft %}
                             {% if apps_published %}
-                            <h2>{{ _('Published') }}</h2>
-                            {% for app in apps_published %}
-                            {{ app_helper.render_app_short_summary(app, upload_method) }}
-                            {% endfor %}
+                                <div class="col-xs-12">
+                                    <h2>{{ _('Published') }}</h2>
+                                </div>
+                                <table class="table table-stripped table-condensed table-hover table-responsive">
+                                    <thead>
+                                        <tr>
+                                            <th>Title</th>
+                                            <th>Created</th>
+                                            <th>Action</th>
+                                        </tr>
+                                    </thead>
+                                    {% for app in apps_published %}
+                                        {{ app_helper.render_app_short_summary(app, upload_method) }}
+                                    {% endfor %}
+                                </table>
                             {% endif %}
                             {% if apps_draft %}
-                            <h2>{{ _('Draft') }}</h2>
-                            {% for app in apps_draft %}
-                            {{ app_helper.render_app_short_summary(app, upload_method) }}
-                            {% endfor %}
+                                <div class="col-xs-12">
+                                    <h2>{{ _('Draft') }}</h2>
+                                </div>
+                                <table class="table table-stripped table-condensed table-hover table-responsive">
+                                    <thead>
+                                    <tr>
+                                        <th>Title</th>
+                                        <th>Created</th>
+                                        <th>Action</th>
+                                    </tr>
+                                    </thead>
+                                    {% for app in apps_draft %}
+                                        {{ app_helper.render_app_short_summary(app, upload_method) }}
+                                    {% endfor %}
+                                </table>
                             {% endif %}
                         {% else %}
-                            <h2>{{ _('You have not created any projects') }}</h2>
-                            <a href="{{url_for('app.new')}}" class="btn btn-primary">{{ _('Get started') }}</a>
+                            <div class="col-xs-12">
+                                <h2>{{ _('You have not created any projects') }}</h2>
+                            </div>
                         {% endif %}
                     {% else %}
                         {{ app_helper.render_app_restricted() }}
