--- a/templates/applications/actions.html
+++ b/templates/applications/actions.html
@@ -1,6 +1,7 @@
 {% extends "applications/app.html" %}
 {% set active_page = "applications" %}
 {% set active_app  = "all" %}
+{% set active_app = app.short_name %}
 
 {% block update %}
   <div class="row" style="padding-top:20px">
