--- a/templates/applications/new_blogpost.html
+++ b/templates/applications/new_blogpost.html
@@ -1,11 +1,11 @@
 {% extends "/base.html" %}
 {% set active_page = "applications" %}
-{% set active_app  = "all" %}
 {% import "applications/_helpers.html" as helper %}
+{% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
-{{ helper.render_app_local_nav(app, 'blog', current_user) }}
+{{ helper.render_local_nav(current_user, 'blog', active_menu, app.short_name) }}
     <div class="container-padded">
         <div class="container container-padded">
         <div id="app-form" class="row"> 
