--- a/templates/applications/task_autoimporter.html
+++ b/templates/applications/task_autoimporter.html
@@ -1,12 +1,13 @@
 {% extends "/base.html" %}
+{% set active_menu = "project" %}
 {% set active_page = "applications" %}
-{% set active_app  = app.short_name %}
 {% import "applications/_helpers.html" as helper %}
+{% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
 {{ helper.render_loading(loading_text) }}
-{{ render_app_local_nav(current_user, active_link) }}
+{{ render_local_nav(current_user, active_link, active_menu, app.short_name) }}
 <div class="container-padded">
     <div class="container container-padded">
         <div class="row">
