--- a/templates/admin/del_category.html
+++ b/templates/admin/del_category.html
@@ -1,23 +1,21 @@
 {% extends "base.html" %}
 {% set active_page = "profile" %}
 {% set active_link = "categories" %}
-{% from "admin/_helpers.html" import render_admin_local_nav %}
+{% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
+{{ render_local_nav(current_user, "categories", "admin") }}
 <div class="container-padded">
     <div class="container container-padded">
         <div class="row">
-            <div class="col-sm-3">
-                {{ render_admin_local_nav(current_user, active_link) }}
-            </div>
-            <div class="col-sm-9">
+            <div class="col-sm-9 col-sm-offset-3">
                 <h1><strong>{{ _('Admin') }}:</strong> Delete Category</h1>
                 <hr>
                 <div class="alert alert-danger">
                     <strong>{{ _('Warning!') }}</strong> {{ _('Deleting the category will remove all associated projects. This operation cannot be undone.') }}
                 </div>
                 <h2>{{_('Delete Category')}}: {{category.name}}?</h2>
-                <form method="POST" role="form" action="{{url_for('admin.del_category', id=category.id)}}">
+                <form method="POST" role="form" action="{{url_for('oclc.del_category', id=category.id)}}">
                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
                     <input class="btn btn-danger" type="submit"  value="Yes"></input>
                     <a class="btn btn-success" href="{{url_for('admin.categories')}}">No, do not delete it</a>
