--- a/templates/admin/update_category.html
+++ b/templates/admin/update_category.html
@@ -1,31 +1,31 @@
 {% extends "base.html" %}
 {% set active_page = "profile" %}
 {% set active_link = "categories" %}
-{% from "admin/_helpers.html" import render_admin_local_nav %}
+{% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
-    {{ render_admin_local_nav(current_user, active_link) }}
-<div class="container-padded">
-    <div class="container container-padded">
-        <div class="row">
-            <div class="col-sm-9 col-sm-offset-3">
-                <h1><strong>{{ _('Admin') }}:</strong> Edit Category</h1>
-                <hr>
-                {% from "_formhelpers.html" import render_field %}
-                <form role="form" method="POST" action="{{url_for('admin.update_category', id=category.id)}}">
-                    {{form.hidden_tag()}}
-                    <fieldset>
-                    {{form.id}}
-                    {{ render_field(form.name, placeholder= _('Category name'), class="form-control") }}
-                    {{ render_field(form.description, placeholder= _('Category description'), class="form-control") }}
-                    <div class="pull-right" role="group">
-                        <a href="{{url_for('admin.categories')}}" class="btn btn-default" >{{_('Cancel')}}</a>
-                         <button type="submit" class="btn btn-danger">{{_('Update Category')}}</button>
+    {{ render_local_nav(current_user, active_link, "admin") }}
+        <div class="container-padded">
+            <div class="container container-padded">
+                <div class="row">
+                    <div class="col-sm-9 col-sm-offset-3">
+                        <h1><strong>{{ _('Admin') }}:</strong> Edit Category</h1>
+                        <hr>
+                        {% from "_formhelpers.html" import render_field %}
+                        <form role="form" method="POST" action="{{url_for('admin.update_category', id=category.id)}}">
+                            {{form.hidden_tag()}}
+                            <fieldset>
+                            {{form.id}}
+                            {{ render_field(form.name, placeholder= _('Category name'), class="form-control") }}
+                            {{ render_field(form.description, placeholder= _('Category description'), class="form-control") }}
+                            <div class="pull-right" role="group">
+                                <a href="{{url_for('admin.categories')}}" class="btn btn-default" >{{_('Cancel')}}</a>
+                                 <button type="submit" class="btn btn-danger">{{_('Update Category')}}</button>
+                            </div>
+                            </fieldset>
+                        </form>
                     </div>
-                    </fieldset>
-                </form>
+                </div>
             </div>
         </div>
-    </div>
-</div>
 {% endblock %}
