--- a/templates/applications/app.html
+++ b/templates/applications/app.html
@@ -1,12 +1,13 @@
 {% extends "/base.html" %}
+{% set active_menu = "project" %}
 {% set active_page = "applications" %}
-{% set active_app  = "all" %}
 {% import "applications/_helpers.html" as helper %}
+{% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
     
     {% if app %}
-    {{ helper.render_app_local_nav(app, 'info', current_user) }}
+    {{ render_local_nav(current_user, 'info', active_menu, app.short_name) }}
     <div class="container-padded  remove-padding-bottom">
         <section class="white">
             <div class="container container-padded">
