--- a/templates/applications/blog.html
+++ b/templates/applications/blog.html
@@ -1,11 +1,12 @@
 {% extends "/base.html" %}
+{% set active_menu = "project" %}
 {% set active_page = "applications" %}
-{% set active_app  = "all" %}
 {% import "applications/_helpers.html" as helper %}
+{% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
 {% if app %}
-        {{ helper.render_app_local_nav(app, 'auditlog', current_user) }}
+        {{ render_local_nav(current_user, 'blogpost', active_menu, app.short_name) }}
             <div class="container-padded">
                 <div class="container container-padded">
                     <div class="row">
