--- a/templates/applications/presenters/basic.html
+++ b/templates/applications/presenters/basic.html
@@ -1,7 +1,5 @@
-<div class="well" style="min-height:211px;">
+<div class="well">
   <h2><i class="glyphicon glyphicon-edit"></i> Basic</h2> 
-  <h3>The most basic template</h3>
-  <p><strong>Complexity</strong>: <i class="glyphicon glyphicon-star"></i></p>
-  <p><strong>Skills</strong>: HTML and JavaScript</p>
-  <p><a href="{{url_for('app.task_presenter_editor', short_name=app.short_name, template='basic')}}" class="btn btn-inverse">Use the Basic template</a></p>
+  <h3>This is the most basic template</h3>
+  <a href="{{url_for('app.task_presenter_editor', short_name=app.short_name, template='basic')}}" class="btn btn-danger btn-dash">Use</a>
 </div>
