--- a/templates/applications/presenters/image.html
+++ b/templates/applications/presenters/image.html
@@ -1,8 +1,5 @@
 <div class="well">
-  <h2><i class="glyphicon glyphicon-picture"></i> Image Pattern Recognition</h2> 
-  <h3>Re-use the Flickr Person Finder template</h3>
-  <p><strong>Complexity</strong>: <i class="glyphicon glyphicon-star"></i><i class="icon-star"></i></p>
-  <p><strong>Skills</strong>: HTML and JavaScript</p>
-  <p><a href="{{url_for('app.task_presenter_editor', short_name=app.short_name, template='image')}}" class="btn btn-inverse">Use the Image template</a></p>
-  <a href="https://github.com/PyBossa/app-flickrperson/archive/master.zip" class="btn btn-inverse">Download the template and work locally</a>
+  <h2><i class="glyphicon glyphicon-picture"></i> Image</h2> 
+  <h3>Re-use the image pattern recognition template</h3>
+  <a href="{{url_for('app.task_presenter_editor', short_name=app.short_name, template='image')}}" class="btn btn-danger btn-dash">Use</a>
 </div>
