--- a/templates/applications/presenters/map.html
+++ b/templates/applications/presenters/map.html
@@ -1,8 +1,5 @@
 <div class="well">
-  <h2><i class="glyphicon glyphicon-globe"></i>Geo-coding</h2> 
-  <h3>Re-use the Urban Park template</h3>
-  <p><strong>Complexity</strong>: <i class="glyphicon glyphicon-star"></i><i class="icon-star"></i><i class="icon-star"></i></p>
-  <p><strong>Skills</strong>: HTML, JavaScript and Geo expertise</p>
-  <p><a href="{{url_for('app.task_presenter_editor', short_name=app.short_name, template='map')}}" class="btn btn-inverse">Use the Mapping template</a></p>
-  <a href="https://github.com/PyBossa/app-geocoding/archive/master.zip" class="btn btn-inverse">Download the template and work locally</a>
+  <h3><i class="glyphicon glyphicon-globe"></i>Georeferencing</h3> 
+  <p>Re-use the georeferencing template</p>
+  <a href="{{url_for('app.task_presenter_editor', short_name=app.short_name, template='map')}}" class="btn btn-danger btn-dash">Use</a>
 </div>
