--- a/templates/applications/presenters/pdf.html
+++ b/templates/applications/presenters/pdf.html
@@ -1,8 +1,5 @@
 <div class="well">
-  <h2><i class="glyphicon glyphicon-pencil"></i>Transcribing documents</h2> 
-  <h3>Re-use the PDF transcription template</h3>
-  <p><strong>Complexity</strong>: <i class="glyphicon glyphicon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i></p>
-  <p><strong>Skills</strong>: HTML, JavaScript and Server side</p>
-  <p><a href="{{url_for('app.task_presenter_editor', short_name=app.short_name, template='pdf')}}" class="btn btn-inverse">Use the Transcription template</a></p>
-  <a href="https://github.com/PyBossa/pdftranscribe/archive/master.zip" class="btn btn-inverse">Download the template and work locally</a>
+  <h2><i class="glyphicon glyphicon-pencil"></i>Transcription</h2> 
+  <h3>Re-use the document transcription template</h3>
+  <a href="{{url_for('app.task_presenter_editor', short_name=app.short_name, template='pdf')}}" class="btn btn-danger btn-dash">Use</a>
 </div>
