--- a/templates/applications/presenters/video.html
+++ b/templates/applications/presenters/video.html
@@ -1,8 +1,5 @@
 <div class="well">
-  <h2><i class="glyphicon glyphicon-film"></i> Video Pattern Recognition</h2> 
-  <h3>Re-use the Vimeo template</h3>
-  <p><strong>Complexity</strong>: <i class="glyphicon glyphicon-star"></i><i class="icon-star"></i></p>
-  <p><strong>Skills</strong>: HTML and JavaScript</p>
-  <p><a href="{{url_for('app.task_presenter_editor', short_name=app.short_name, template='video')}}" class="btn btn-inverse">Use the Video template</a></p>
-  <a href="https://github.com/PyBossa/app-vimeo/archive/master.zip" class="btn btn-inverse">Download the template and work locally</a>
+  <h2><i class="glyphicon glyphicon-film"></i> Video</h2> 
+  <p>Re-use the video pattern recognition template</p>
+  <a href="{{url_for('app.task_presenter_editor', short_name=app.short_name, template='video')}}" class="btn btn-danger btn-dash">Use</a>
 </div>
