--- a/templates/applications/tasks/delete.html
+++ b/templates/applications/tasks/delete.html
@@ -2,9 +2,10 @@
 {% set active_page = "applications" %}
 {% set active_link  = "settings" %}
 {% import "applications/_helpers.html" as helper %}
+{% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
-        {{ helper.render_app_local_nav(app, 'auditlog', current_user) }}
+        {{ render_local_nav(current_user, 'info', "admin", app.short_name)}}
             <div class="container-padded">
                 <div class="container container-padded">
                     <div class="row">
