--- a/templates/applications/update.html
+++ b/templates/applications/update.html
@@ -1,12 +1,15 @@
 {% extends "/base.html" %}
+{% set active_menu = "project" %}
 {% set active_page = "applications" %}
+{% set active_app = app.short_name %}
 {% import "applications/_helpers.html" as helper %}
+{% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
 <script src="{{url_for('static', filename='js/vendor/jquery.Jcrop.min.js')}}"></script>
 <link rel="stylesheet" href="{{url_for('static', filename='css/jquery.Jcrop.min.css')}}" type="text/css" />
-{{ render_app_local_nav(current_user, active_link) }}
+{{ render_local_nav(current_user, active_link, active_menu, app.short_name) }}
 <div class="container-padded">
     <div class="container container-padded">
         <div class="row">
@@ -34,15 +37,15 @@
             <form class="form-horizontal" method="post" action="{{ url_for('app.update', short_name = app.short_name) }}">
               <fieldset>
                 {{ form.hidden_tag() }}
-                {{ render_field(form.name, class_="input-xlarge", placeholder=_('The name of the project')) }}
-                {{ render_field(form.short_name, class_="input-xlarge", placeholder=_('Short name or slug for the project'), label_text=_('Project slug:')) }}
-                {{ render_field(form.description, class_="input-xlarge", placeholder=_('Give some details about the project')) }}
-                {{ render_field(form.long_description, class_="input-xlarge", placeholder=_('Explain the project (use Markdown!)')) }}
-                {{ render_field(form.category_id) }}
-                {{ render_field(form.allow_anonymous_contributors) }}
-                {{ render_field(form.password) }}
-                {{ render_field(form.webhook) }}
-                {{ render_field(form.hidden, tooltip=_('Do you want to hide your project?')) }}
+                {{ render_field(form.name, class_="form-control", placeholder=_('The name of the project')) }}
+                {{ render_field(form.short_name, class_="form-control", placeholder=_('Short name or slug for the project'), label_text=_('Project slug:')) }}
+                {{ render_field(form.description, class_="form-control", placeholder=_('Give some details about the project')) }}
+                {{ render_field(form.long_description, class_="form-control", placeholder=_('Explain the project (use Markdown!)')) }}
+                {{ render_field(form.category_id, class_="form-control") }}
+                {{ render_field(form.allow_anonymous_contributors, class_="form-control") }}
+                {{ render_field(form.password, class_="form-control") }}
+                {{ render_field(form.webhook, class_="form-control") }}
+                {{ render_field(form.hidden, tooltip=_('Do you want to hide your project?'), class_="form-control") }}
                 <div class="form-actions">
                   <button type="submit" name='btn' value="Save the changes" class="btn btn-danger">{{_('Save the changes')}}</button>
                   <a href="{{url_for('app.settings', short_name=app.short_name)}}" class="btn">{{_('Cancel')}}</a>
