--- a/templates/applications/update_blogpost.html
+++ b/templates/applications/update_blogpost.html
@@ -1,11 +1,12 @@
 {% extends "/base.html" %}
+{% set active_menu = "project" %}
 {% set active_page = "applications" %}
-{% set active_app  = "all" %}
 {% import "applications/_helpers.html" as helper %}
+{% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
-{{ render_app_local_nav(current_user, active_link) }}
+{{ render_local_nav(current_user, active_link, active_menu, app.short_name) }}
 <div class="container-padded">
     <div class="container container-padded">
         <div class="row">
